Started restructuring Class item menu

--- a/less/items.less
+++ b/less/items.less
@@ -103,6 +103,13 @@
         text-align: center;
         line-height: 24px;
       }
+
+      .form-fields {
+        &.hp-list input {
+          flex: 0 0 9%;
+          text-align: center;
+        }
+      }
     }
 
     .form-group.input-select {
