--- a/templates/actors/parts/actor-spellbook.html
+++ b/templates/actors/parts/actor-spellbook.html
@@ -1,7 +1,7 @@
 <div class="inventory-filters spellbook-filters flexrow">
     <div class="form-group spellcasting-ability">
         {{#unless isNPC}}
-        <label>{{localize "ME5E.Spellcasting"}}</label>
+        <label>{{localize "ME5E.Casting"}}</label>
         {{else}}
         <label>{{localize "ME5E.Level"}}</label>
         <input class="spellcasting-level" type="text" name="data.details.spellLevel"
