Reshuffled character sheet a little, removed temp map hp, started dynamic max hp

--- a/less/character.less
+++ b/less/character.less
@@ -68,6 +68,10 @@
         margin: 0 3px;
       }
 
+      .hp-max {
+        margin-left: 8px;
+      }
+
       .hit-dice {
         font-size: 24px;
       }
