--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -48,17 +48,18 @@
             {{!-- Header Attributes --}}
             <ul class="attributes flexrow">
                 <li class="attribute health">
-                    <h4 class="attribute-name box-title">{{ localize "ME5E.HitPoints" }}</h4>
+                    <h4 class="attribute-name box-title">
+                        {{ localize "ME5E.HitPoints" }}
+                        <a class="config-button" data-action="hp" title="{{localize 'ME5E.HitPointsConfig'}}"><i class="fas fa-cog"></i></a>
+                    </h4>
                     <div class="attribute-value multiple">
                         <input name="data.attributes.hp.value" type="text" value="{{data.attributes.hp.value}}" placeholder="10" data-dtype="Number"/>
                         <span class="sep"> / </span>
-                        <input name="data.attributes.hp.max" type="text" value="{{data.attributes.hp.max}}" placeholder="10" data-dtype="Number"/>
+                        <label class="hp-max">{{data.attributes.hp.max}}</label>
                     </div>
                     <footer class="attribute-footer">
                         <input name="data.attributes.hp.temp" type="text" class="temphp" placeholder="+{{ localize 'ME5E.Temp' }}"
                                value="{{data.attributes.hp.temp}}" data-dtype="Number"/>
-                        <input name="data.attributes.hp.tempmax" type="text" class="temphp" placeholder="+{{ localize 'ME5E.Max' }}"
-                               value="{{data.attributes.hp.tempmax}}" data-dtype="Number"/>
                     </footer>
                 </li>
 
@@ -133,40 +134,7 @@
         <div class="tab attributes flexrow" data-group="primary" data-tab="attributes">
 
             {{!-- Ability Scores --}}
-            <ul class="ability-scores flexrow">
-            {{#each data.abilities as |ability id|}}
-                <li class="ability {{#if ability.proficient}}proficient{{/if}}" data-ability="{{id}}">
-                    <h4 class="ability-name box-title rollable">{{ability.label}}</h4>
-                    <input class="ability-score" name="data.abilities.{{id}}.value" type="number" value="{{ability.value}}" placeholder="10"/>
-                    <div class="ability-modifiers flexrow">
-                        <span class="ability-mod" title="{{ localize 'ME5E.Modifier' }}">{{numberFormat ability.mod decimals=0 sign=true}}</span>
-                        <input type="hidden" name="data.abilities.{{id}}.proficient" value="{{ability.baseProf}}" data-dtype="Number"/>
-                        <a class="proficiency-toggle ability-proficiency" title="{{ localize 'ME5E.Proficiency' }}">{{{ability.icon}}}</a>
-                        <span class="ability-save" title="{{ localize 'ME5E.SavingThrow' }}">{{numberFormat ability.save decimals=0 sign=true}}</span>
-                    </div>
-                    <a class="config-button" data-action="ability" title="{{localize 'ME5E.AbilityConfigure'}}"><i class="fas fa-cog"></i></a>
-                </li>
-            {{/each}}
-            </ul>
-
-            {{!-- Skills --}}
-            <ul class="skills-list">
-            {{#each config.skills as |label s|}}
-            {{#with (lookup ../data.skills s) as |skill|}}
-                <li class="skill flexrow {{#if skill.value}}proficient{{/if}}" data-skill="{{s}}">
-                    <input type="hidden" name="data.skills.{{s}}.value" value="{{skill.baseValue}}" data-dtype="Number"/>
-                    <a class="proficiency-toggle skill-proficiency" title="{{skill.hover}}">{{{skill.icon}}}</a>
-                    <div class="skill-name-controls">
-                      <h4 class="skill-name rollable">{{label}}</h4>
-                      <a class="config-button" data-action="skill" title="{{localize 'ME5E.SkillConfigure'}}"><i class="fas fa-cog"></i></a>
-                    </div>
-                    <span class="skill-ability">{{skill.ability}}</span>
-                    <span class="skill-mod">{{numberFormat skill.total decimals=0 sign=true}}</span>
-                    <span class="skill-passive">({{skill.passive}})</span>
-                </li>
-            {{/with}}
-            {{/each}}
-            </ul>
+            {{> "systems/me5e/templates/actors/parts/actor-abilities-skills.html"}}
 
             <section class="center-pane flexcol">
 
