Started implementing Init modifiers

--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -50,7 +50,7 @@
                 <li class="attribute health">
                     <h4 class="attribute-name box-title">
                         {{ localize "ME5E.HitPoints" }}
-                        <a class="config-button" data-action="hp" title="{{localize 'ME5E.HitPointsConfig'}}"><i class="fas fa-cog"></i></a>
+                        <a class="config-button" data-action="mod" data-modtype="hp" title="{{localize 'ME5E.HitPointsConfig'}}"><i class="fas fa-cog"></i></a>
                     </h4>
                     <div class="attribute-value multiple">
                         <input name="data.attributes.hp.value" type="text" value="{{data.attributes.hp.value}}" placeholder="10" data-dtype="Number"/>
@@ -104,7 +104,10 @@
                 </li>
 
                 <li class="attribute initiative">
-                    <h4 class="attribute-name box-title rollable" data-action="rollInitiative">{{ localize "ME5E.Initiative" }}</h4>
+                    <h4 class="attribute-name box-title rollable" data-action="rollInitiative">
+                        {{ localize "ME5E.Initiative" }}
+                        <a class="config-button" data-action="mod" data-modtype="init" title="{{localize 'ME5E.HitPointsConfig'}}"><i class="fas fa-cog"></i></a>
+                    </h4>
                     <div class="attribute-value">
                         <span>{{numberFormat data.attributes.init.total decimals=0 sign=true}}</span>
                     </div>
