[#530] Add class identifier to be used in roll formulas
Source: https://gitlab.com/foundrynet/dnd5e/-/commit/55f2b60e2631868e21e4d4c3c8cf4028fe3644b4

--- a/templates/items/class.html
+++ b/templates/items/class.html
@@ -140,6 +140,17 @@
         </div>
         <div class="tab details" data-group="primary" data-tab="config">
             <h1>{{localize "ME5E.General"}}</h1>
+            {{!-- Identifier --}}
+            <div class="form-group">
+                <label>{{ localize "ME5E.ClassIdentifier" }}</label>
+                <div class="form-fields">
+                    <input type="text" name="data.identifier" value="{{data.identifier}}">
+                </div>
+                <p class="hint">
+                    {{{localize "ME5E.ClassIdentifierHint" identifier=data.identifier}}}
+                </p>
+            </div>
+
             <div class="form-group">
                 <label>{{localize "ME5E.HitDice"}}</label>
                 <div class="form-fields">
