Advancement - Item UI
Source: https://gitlab.com/foundrynet/dnd5e/-/commit/69a9e3970004d34ef32b33a6b004231916d8021d

--- a/templates/items/class.html
+++ b/templates/items/class.html
@@ -28,6 +28,7 @@
         <a class="item" data-tab="details">{{ localize "ME5E.Details" }}</a>
         <a class="item" data-tab="charConfig">{{ localize "ME5E.ClassCharConfig" }}</a>
         <a class="item" data-tab="config">{{ localize "ME5E.ClassConfig" }}</a>
+        <a class="item" data-tab="advancement">{{ localize "ME5E.AdvancementTitle" }}</a>
     </nav>
 
     {{!-- Item Sheet Body --}}
@@ -304,5 +305,9 @@
                 </div>
             </div>
         </div>
+
+        {{!-- Advancement Tab --}}
+        {{> "systems/dnd5e/templates/items/parts/item-advancement.html"}}
+
     </section>
 </form>
