Allow spell components and tags to be configured and localised
Source: https://gitlab.com/foundrynet/dnd5e/-/commit/36098142d3ab2799045d1ba227b0fb14c8fa9b17

--- a/me5e.css
+++ b/me5e.css
@@ -1293,8 +1293,7 @@
 .me5e.sheet.actor .spell-component {
   line-height: 14px;
 }
-.me5e.sheet.actor .spell-component.C,
-.me5e.sheet.actor .spell-component.R {
+.me5e.sheet.actor .spell-component.tag {
   display: inline-block;
   text-align: center;
   padding-top: 1px;
@@ -1343,6 +1342,9 @@
   /*  Item Actions                             */
   /* ----------------------------------------- */
   /* ----------------------------------------- */
+  /*  Item Advancement                         */
+  /* ----------------------------------------- */
+  /* ----------------------------------------- */
   /*  Loot Sheet (No Tabs)                     */
   /* ----------------------------------------- */
 }
@@ -1365,6 +1367,11 @@
 .me5e.sheet.item .sheet-header .item-subtitle .item-status {
   font-size: 16px;
   line-height: 24px;
+}
+.me5e.sheet.item .sheet-header .summary .class-level {
+  flex: 0 0 4em;
+  padding: 0 0.25em;
+  text-align: right;
 }
 .me5e.sheet.item .sheet-navigation {
   margin-bottom: 5px;
@@ -1512,6 +1519,35 @@
 }
 .me5e.sheet.item .weapon-properties label.checkbox {
   flex: 0 0 98px;
+}
+.me5e.sheet.item .advancement .items-list .items-header .item-checkmark {
+  flex: 0 0 44px;
+  color: #119111;
+}
+.me5e.sheet.item .advancement .items-list .items-header .item-warning {
+  flex: 0 0 44px;
+  color: #faff23;
+}
+.me5e.sheet.item .advancement .items-list .item-name {
+  flex: 1 0 10em;
+}
+.me5e.sheet.item .advancement .items-list .item-image.inverted {
+  mix-blend-mode: difference;
+}
+.me5e.sheet.item .advancement .items-list .item-summary {
+  flex: 0 0 100%;
+  font-size: 12px;
+  line-height: 16px;
+  padding: 0.25em 0.5em 0.25em 2.7em;
+  color: #191813;
+  border-top: 1px solid #c9c7b8;
+}
+.me5e.sheet.item .advancement .items-list .item-summary .item-list .item-name {
+  display: flex;
+}
+.me5e.sheet.item .advancement .items-list .tag {
+  font-size: 0.7rem;
+  padding: 0.1em 0.5em;
 }
 .me5e.sheet.item .loot-header {
   margin-bottom: 10px;
