--- a/templates/items/spell.html
+++ b/templates/items/spell.html
@@ -72,21 +72,12 @@
             {{!-- Spell Components --}}
             <div class="spell-components form-group stacked">
                 <label>{{ localize "ME5E.SpellComponents" }}</label>
+                {{#each config.spellComponents as |component key|}}
                 <label class="checkbox">
-                    <input type="checkbox" name="data.components.vocal" {{checked data.components.vocal}}/> {{ localize "ME5E.ComponentVerbal" }}
+                    <input type="checkbox" name="data.components.{{key}}" {{checked (lookup ../data.components key)}}>
+                    {{component.label}}
                 </label>
-                <label class="checkbox">
-                    <input type="checkbox" name="data.components.somatic" {{checked data.components.somatic}}/> {{ localize "ME5E.ComponentSomatic" }}
-                </label>
-                <label class="checkbox">
-                    <input type="checkbox" name="data.components.material" {{checked data.components.material}}/> {{ localize "ME5E.ComponentMaterial" }}
-                </label>
-                <label class="checkbox">
-                    <input type="checkbox" name="data.components.concentration" {{checked data.components.concentration}}/> {{ localize "ME5E.Concentration" }}
-                </label>
-                <label class="checkbox">
-                    <input type="checkbox" name="data.components.ritual" {{checked data.components.ritual}}/> {{ localize "ME5E.Ritual" }}
-                </label>
+                {{/each}}
             </div>
 
             {{!-- Material Components --}}
