Fixed class showing the incorrect level 1 health

--- a/templates/items/class.html
+++ b/templates/items/class.html
@@ -65,7 +65,7 @@
             <div class="form-group">
                 <label>{{localize "ME5E.ClassLevelHP"}}</label>
                 <div class="form-fields hp-list">
-                    <input type="text" value="{{data.defaultHp}}" title="{{localize 'ME5E.ClassLevel' level='1'}}" data-dtype="Number" disabled/>
+                    <input type="text" value="{{slice data.hitDice 1 undefined}}" title="{{localize 'ME5E.ClassLevel' level='1'}}" data-dtype="Number" disabled/>
                     {{#each data.hp}}
                         <input type="text" name="data.hp" value="{{this}}" title="{{localize 'ME5E.ClassLevel' level=(math @index '+' 2)}}" data-dtype="Number"/>
                     {{/each}}
