Fixed initiative settings also rolling initiative

--- a/less/actors.less
+++ b/less/actors.less
@@ -81,7 +81,7 @@
           border-right: none;
         }
 
-        .attribute-name {
+        .attribute-title {
           position: relative;
         }
 
@@ -93,6 +93,8 @@
         .config-button {
           position: absolute;
           display: none;
+          right: 3px;
+          top: 1px;
         }
 
         &:hover .config-button {
