--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -48,10 +48,12 @@
             {{!-- Header Attributes --}}
             <ul class="attributes flexrow">
                 <li class="attribute health">
-                    <h4 class="attribute-name box-title">
-                        {{ localize "ME5E.HitPoints" }}
+                    <div class="attribute-title">
+                        <h4 class="attribute-name box-title">
+                            {{ localize "ME5E.HitPoints" }}
+                        </h4>
                         <a class="config-button" data-action="mod" data-modtype="attributes.hp" title="{{localize 'ME5E.HitPointsConfig'}}"><i class="fas fa-cog"></i></a>
-                    </h4>
+                    </div>
                     <div class="attribute-value multiple attributable" data-property="attributes.hp">
                         <input name="data.attributes.hp.value" type="text" value="{{data.attributes.hp.value}}" placeholder="10" data-dtype="Number"/>
                         <span class="sep"> / </span>
@@ -64,10 +66,12 @@
                 </li>
 
                 <li class="attribute hit-dice">
-                    <h4 class="attribute-name box-title">
-                        {{ localize "ME5E.HitDice" }}
+                    <div class="attribute-title">
+                        <h4 class="attribute-name box-title">
+                            {{ localize "ME5E.HitDice" }}
+                        </h4>
                         <a class="config-button" data-action="hit-dice" title="{{localize 'ME5E.HitDiceConfig'}}"><i class="fas fa-cog"></i></a>
-                    </h4>
+                    </div>
                     <div class="attribute-value multiple">
                         <label class="hit-dice">{{data.attributes.hd}} <span class="sep"> / </span> {{data.details.level}}</label>
                     </div>
@@ -78,10 +82,12 @@
                 </li>
 
                 <li class="attribute armor">
-                    <h4 class="attribute-name box-title">
-                        {{ localize "ME5E.ArmorClass" }}
+                    <div class="attribute-title">
+                        <h4 class="attribute-name box-title">
+                            {{ localize "ME5E.ArmorClass" }}
+                        </h4>
                         <a class="config-button" data-action="armor" title="{{localize 'ME5E.ArmorConfig'}}"><i class="fas fa-cog"></i></a>
-                    </h4>
+                    </div>
                     <div class="attribute-value attributable" data-property="attributes.ac">
                         <span>{{data.attributes.ac.value}}</span>
                     </div>
@@ -91,11 +97,13 @@
                 </li>
 
                 <li class="attribute movement">
-                    <h4 class="attribute-name box-title">
-                        {{ localize "ME5E.Movement" }}
+                    <div class="attribute-title">
+                        <h4 class="attribute-name box-title">
+                            {{ localize "ME5E.Movement" }}
+                        </h4>
                         <a class="config-button" data-action="movement" title="{{localize 'ME5E.MovementConfig'}}"><i class="fas fa-cog"></i></a>
-                    </h4>
-                    <div class="attribute-value">
+                    </div>
+                        <div class="attribute-value">
                         <span>{{movement.primary}}</span>
                     </div>
                     <footer class="attribute-footer">
@@ -104,10 +112,12 @@
                 </li>
 
                 <li class="attribute initiative">
-                    <h4 class="attribute-name box-title rollable" data-action="rollInitiative">
-                        {{ localize "ME5E.Initiative" }}
+                    <div class="attribute-title">
+                        <h4 class="attribute-name box-title rollable" data-action="rollInitiative">
+                            {{ localize "ME5E.Initiative" }}
+                        </h4>
                         <a class="config-button" data-action="mod" data-modtype="attributes.init" title="{{localize 'ME5E.HitPointsConfig'}}"><i class="fas fa-cog"></i></a>
-                    </h4>
+                    </div>
                     <div class="attribute-value attributable" data-property="attributes.init">
                         <span>{{numberFormat data.attributes.init.value decimals=0 sign=true}}</span>
                     </div>
