Add attack damage info to item sheet
Source https://gitlab.com/foundrynet/dnd5e/-/commit/40d63f44923b584a365d977cfa201deb2e8e9ab0

--- a/less/items.less
+++ b/less/items.less
@@ -88,6 +88,13 @@
           line-height: 18px;
         }
       }
+
+      .properties-header {
+        font-weight: bold;
+        color: @colorOlive;
+        margin: 0.5em 0 0 0;
+        font-size: 1em;
+      }
     }
   }
 
