--- a/me5e.css
+++ b/me5e.css
@@ -1417,6 +1417,12 @@
   font-size: 12px;
   line-height: 18px;
 }
+.me5e.sheet.item .sheet-body .item-properties .properties-header {
+  font-weight: bold;
+  color: #4b4a44;
+  margin: 0.5em 0 0 0;
+  font-size: 1em;
+}
 .me5e.sheet.item .details input[type="text"],
 .me5e.sheet.item .details input[type="number"],
 .me5e.sheet.item .details select {
