Shuffled config and implemented ability to select skill ability

--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -32,7 +32,7 @@
             {{!-- Character Summary --}}
             <ul class="summary flexrow">
                 <li>
-                    <input type="text" name="data.details.race" value="{{data.details.race}}" placeholder="{{ localize 'ME5E.Race' }}"/>
+                    <input type="text" name="data.details.species" value="{{data.details.species}}" placeholder="{{ localize 'ME5E.Species' }}"/>
                 </li>
                 <li>
                     {{#if labels.background}}
