--- a/templates/apps/skill-config.html
+++ b/templates/apps/skill-config.html
@@ -1,6 +1,12 @@
 <form autocomplete="off">
   <p class="notes">{{localize "ME5E.SkillConfigurationHint"}}</p>
   <div class="form-group">
+    <label>{{ localize "ME5E.SkillAbility" }}</label>
+    <select name="data.skills.{{skillId}}.userAbility">
+      {{selectOptions abilities selected=skill.userAbility}}
+    </select>
+  </div>
+  <div class="form-group">
     <label>{{ localize "ME5E.ProficiencyLevel" }}</label>
     <select name="data.skills.{{skillId}}.value">
       {{selectOptions proficiencyLevels selected=skill.value}}
