Changed alignment input on character sheet to dropdown

--- a/less/character.less
+++ b/less/character.less
@@ -41,6 +41,12 @@
         margin-left: 3px;
       }
     }
+
+    .summary {
+      .alignment {
+        color: #4b4a44;
+      }
+    }
     .xpbar {
       flex: 0 0 8px;
       width: 100%;
