--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -42,7 +42,9 @@
                     {{/if}}
                 </li>
                 <li>
-                    <input type="text" name="data.details.alignment" value="{{data.details.alignment}}" placeholder="{{ localize 'ME5E.Alignment' }}"/>
+                    <select class="alignment" name="data.details.alignment">
+                        {{selectOptions config.alignments selected=data.details.alignment blank=(localize 'ME5E.Alignment')}}
+                    </select>
                 </li>
                 <li class="proficiency">
                     <span>{{ localize "ME5E.Proficiency" }} {{labels.proficiency}}</span>
