--- a/less/actors.less
+++ b/less/actors.less
@@ -11,8 +11,8 @@
   // Attribute Configuration
   .config-button {
     color: @colorOlive;
-    right: -6px;
-    top: -3px;
+    right: 3px;
+    top: 2px;
     font-size: 10px;
     font-weight: normal;
   }
@@ -188,7 +188,11 @@
         font-family: "Signika", sans-serif;
         font-size: 12px;
         font-weight: 400;
-        white-space: nowrap
+        white-space: nowrap;
+
+        .skill-ability {
+          text-transform: capitalize;
+        }
       }
     }
   }
