--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -54,7 +54,7 @@
             {{!-- Header Attributes --}}
             <ul class="attributes flexrow">
                 <li class="attribute health">
-                    <h4 class="attribute-name box-title">{{ localize "ME5E.HitPoints" }}</h4>
+                    <div class="attribute-name"><h4 class="box-title">{{ localize "ME5E.HitPoints" }}</h4></div>
                     <div class="attribute-value multiple">
                         <input name="data.attributes.hp.value" type="text"
                                value="{{data.attributes.hp.value}}" placeholder="10"
@@ -73,10 +73,10 @@
                 </li>
 
                 <li class="attribute hit-dice">
-                    <h4 class="attribute-name box-title">
-                        {{ localize "ME5E.HitDice" }}
+                    <div class="attribute-name">
+                        <h4 class="box-title">{{ localize "ME5E.HitDice" }}</h4>
                         <a class="config-button" data-action="hit-dice" title="{{localize 'ME5E.HitDiceConfig'}}"><i class="fas fa-cog"></i></a>
-                    </h4>
+                    </div>
                     <div class="attribute-value multiple">
                         <label class="hit-dice">
                             <span title="{{localize 'ME5E.HitDiceRemaining'}}">{{data.attributes.hd}}</span>
@@ -91,10 +91,10 @@
                 </li>
 
                 <li class="attribute armor">
-                    <h4 class="attribute-name box-title">
-                        {{ localize "ME5E.ArmorClass" }}
+                    <div class="attribute-name">
+                        <h4 class="box-title">{{ localize "ME5E.ArmorClass" }}</h4>
                         <a class="config-button" data-action="armor" title="{{localize 'ME5E.ArmorConfig'}}"><i class="fas fa-cog"></i></a>
-                    </h4>
+                    </div>
                     <div class="attribute-value attributable" data-property="attributes.ac">
                         <span>{{data.attributes.ac.value}}</span>
                     </div>
@@ -104,10 +104,10 @@
                 </li>
 
                 <li class="attribute movement">
-                    <h4 class="attribute-name box-title">
-                        {{ localize "ME5E.Movement" }}
+                    <div class="attribute-name">
+                        <h4 class="box-title">{{ localize "ME5E.Movement" }}</h4>
                         <a class="config-button" data-action="movement" title="{{localize 'ME5E.MovementConfig'}}"><i class="fas fa-cog"></i></a>
-                    </h4>
+                    </div>
                     <div class="attribute-value">
                         <span>{{movement.primary}}</span>
                     </div>
@@ -117,14 +117,15 @@
                 </li>
 
                 <li class="attribute initiative">
-                    <h4 class="attribute-name box-title rollable" data-action="rollInitiative">{{ localize "ME5E.Initiative" }}</h4>
+                    <div class="attribute-name box-title">
+                        <h4 class="box-title rollable" data-action="rollInitiative">{{ localize "ME5E.Initiative" }}</h4>
+                        <a class="config-button" data-action="init" title="{{localize 'ME5E.InitConfig'}}"><i class="fas fa-cog"></i></a>
+                    </div>
                     <div class="attribute-value">
                         <span>{{numberFormat data.attributes.init.total decimals=0 sign=true}}</span>
                     </div>
                     <footer class="attribute-footer">
-                        <span>{{ localize "ME5E.Modifier" }}</span>
-                        <input name="data.attributes.init.value" type="text" data-dtype="Number" placeholder="0"
-                               value="{{numberFormat data.attributes.init.value decimals=0 sign=true}}"/>
+                        <span class="skill-ability">{{data.attributes.init.ability}}</span>
                     </footer>
                 </li>
             </ul>
