--- a/templates/apps/skill-config.html
+++ b/templates/apps/skill-config.html
@@ -3,7 +3,7 @@
   <div class="form-group">
     <label>{{ localize "ME5E.SkillAbility" }}</label>
     <select name="data.skills.{{skillId}}.userAbility">
-      {{selectOptions abilities selected=skill.userAbility}}
+      {{selectOptions abilities selected=skill.userAbility blank=(concat "Default (" (lookup abilities skill.defaultAbility) ")")}}
     </select>
   </div>
   <div class="form-group">
