--- a/templates/actors/character-sheet.hbs
+++ b/templates/actors/character-sheet.hbs
@@ -71,10 +71,10 @@
                 </li>
 
                 <li class="attribute hit-dice">
-                    <h4 class="attribute-name box-title">
-                        {{ localize "ME5E.HitDice" }}
+                    <div class="attribute-name">
+                        <h4 class="box-title">{{ localize "ME5E.HitDice" }}</h4>
                         <a class="config-button" data-action="hit-dice" title="{{localize 'ME5E.HitDiceConfig'}}"><i class="fas fa-cog"></i></a>
-                    </h4>
+                    </div>
                     <div class="attribute-value multiple">
                         <label class="hit-dice">
                             <span title="{{localize 'ME5E.HitDiceRemaining'}}">{{system.attributes.hd}}</span>
@@ -89,10 +89,10 @@
                 </li>
 
                 <li class="attribute armor">
-                    <h4 class="attribute-name box-title">
-                        {{ localize "ME5E.ArmorClass" }}
+                    <div class="attribute-name">
+                        <h4 class="box-title">{{ localize "ME5E.ArmorClass" }}</h4>
                         <a class="config-button" data-action="armor" title="{{localize 'ME5E.ArmorConfig'}}"><i class="fas fa-cog"></i></a>
-                    </h4>
+                    </div>
                     <div class="attribute-value attributable" data-property="attributes.ac">
                         <span>{{system.attributes.ac.value}}</span>
                     </div>
@@ -102,10 +102,10 @@
                 </li>
 
                 <li class="attribute movement">
-                    <h4 class="attribute-name box-title">
-                        {{ localize "ME5E.Movement" }}
+                    <div class="attribute-name">
+                        <h4 class="box-title">{{ localize "ME5E.Movement" }}</h4>
                         <a class="config-button" data-action="movement" title="{{localize 'ME5E.MovementConfig'}}"><i class="fas fa-cog"></i></a>
-                    </h4>
+                    </div>
                     <div class="attribute-value">
                         <span>{{movement.primary}}</span>
                     </div>
@@ -115,14 +115,15 @@
                 </li>
 
                 <li class="attribute initiative">
-                    <h4 class="attribute-name box-title rollable" data-action="rollInitiative">{{ localize "ME5E.Initiative" }}</h4>
+                    <div class="attribute-name box-title">
+                        <h4 class="box-title rollable" data-action="rollInitiative">{{ localize "ME5E.Initiative" }}</h4>
+                        <a class="config-button" data-action="init" title="{{localize 'ME5E.InitConfig'}}"><i class="fas fa-cog"></i></a>
+                    </div>
                     <div class="attribute-value">
                         <span>{{numberFormat system.attributes.init.total decimals=0 sign=true}}</span>
                     </div>
                     <footer class="attribute-footer">
-                        <span>{{ localize "ME5E.Modifier" }}</span>
-                        <input name="system.attributes.init.value" type="text" data-dtype="Number" placeholder="0"
-                               value="{{numberFormat system.attributes.init.value decimals=0 sign=true}}"/>
+                        <span class="skill-ability">{{system.attributes.init.ability}}</span>
                     </footer>
                 </li>
             </ul>
@@ -175,7 +176,6 @@
                     </div>
                     <span class="skill-ability">{{skill.ability}}</span>
                     <span class="skill-mod" title="{{ localize 'ME5E.SkillModifierHint' skill=label }}">{{numberFormat skill.total decimals=0 sign=true}}</span>
-                    <span class="skill-passive" title="{{ localize 'ME5E.SkillPassiveHint' skill=label }}">({{skill.passive}})</span>
                 </li>
             {{/with}}
             {{/each}}
