--- a/templates/items/tool.hbs
+++ b/templates/items/tool.hbs
@@ -19,7 +19,7 @@
                     {{#if system.toolType}}
                       {{lookup config.toolTypes system.toolType}}
                     {{else}}
-                      {{localize "DND5E.ItemTypeTool"}}
+                      {{localize "ME5E.ItemTypeTool"}}
                     {{/if}}
                 </li>
                 <li>
